common/security/src/main/kotlin/com/example/chat/auth/jwt/error/JwtAuthenticationException.kt
package com.example.chat.auth.jwt.error

class JwtAuthenticationException(errorCode: AuthErrorCode) : AuthException(errorCode)
